<resources>
    <string name="app_name">My Food App</string>
    <string name="My_restaurant_app">My restaurant app</string>
    <string name="hello_exemple_your_dream_food"> hello exemple your dream food </string>
    <string name="sign_in">sign in</string>
    <string name="register">Register</string>
    <string name="full_name">full name</string>
    <string name="password">password</string>
    <string name="email_adress">example@gmail.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">my_cart</string>
    <string name="shottimecoding_gmail_com">shottimecoding@gmail.com</string>
    <string name="s_t_c">S T C</string>
    <string name="log_out">Log Out</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="min_45">Min - $45</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="description">bla bla bla</string>
    <string name="My_Cart">My_Cart</string>
</resources>